--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3196,12 +3196,14 @@ body.dark .main-header .header-panel .logo-dark {
 .auth-bg-image-box .auth-bg-image {
   background-image: url(bg0.svg);
   width: 100%;
-  height: 280px;
+  height: 200px;
   background-position: bottom;
   background-repeat: repeat-x;
   position: relative;
   z-index: -1;
   background-size: 456px;
+
+  animation: slide-bg 10s linear infinite;
 }
 body.dark .auth-bg-image-box .auth-bg-image {
   filter: brightness(0.7);
@@ -3227,7 +3229,7 @@ body.dark .auth-bg-image-box .auth-bg-image {
   border-radius: 20px 20px 0 0;
   position: absolute;
   bottom: 0;
-  max-height: calc(100vh - 60px - 407px);
+  max-height: calc(100vh - 60px - 187px);
   height: 100%;
 }
 .auth-content-bg .auth-title {
@@ -7965,4 +7967,10 @@ body.dark .poster-part {
 }
 body.dark .vehicle-content .content-title .members {
   filter: invert(1);
+}
+
+
+@keyframes slide-bg {
+  from {background-position-x: 0;}
+  to {background-position-x: -456px;}
 }
