--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7979,13 +7979,14 @@ body.dark .vehicle-content .content-title .members {
 #toast-container {
   position: fixed;
   top: 20px;
-  right: 20px;
+  right: 10px;
   z-index: 9999;
 }
 .toast {
   min-width: 250px;
   margin-bottom: 10px;
   padding: 8px 12px;
+  font-size:8px;
   color: white;
   border-radius: 6px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
