--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ section,
   text-overflow: ellipsis;
   overflow: hidden;
   font-size: 13px;
+  margin:5px 5px 0;
 }
 .success-color {
   color: rgba(var(--success-color), 1) !important;
@@ -8005,7 +8006,23 @@ body.dark .vehicle-content .content-title .members {
     70% {transform: scale(1.1);box-shadow: 0 0 0 20px rgba(197, 63, 63, 0);}
     100% {transform: scale(1);box-shadow: 0 0 0 0 rgba(197, 63, 63, 0);}
 }
-
+.sesatf {
+  position: fixed;
+  top: 8vh;
+  font-size: 10px;
+  width: 100%;
+  margin: 0 auto;
+  left: 0;
+}
+.btnb {
+  background: #c53f3f;
+  color: #fff;
+  position: relative;
+  font-size: 10px;
+  width: 60%;
+  margin: 0 auto;
+  display: block;
+}
 .e404{
   width: 100%;
   margin: 0px auto 20px;
@@ -8013,6 +8030,13 @@ body.dark .vehicle-content .content-title .members {
   position: fixed;
   background: #fafcff;
   top: 0;
+  left: 0;
+}
+.e4042{
+  width: 100vw;
+  position: fixed;
+  object-fit: contain;
+  bottom: -5px;
   left: 0;
 }
 .recent-place-item:hover { transform:translateY(-2px); transition:0.2s; cursor:pointer; }
