--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ section,
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  font-size: 13px;
+  font-size: 12px;
   margin:5px 5px 0;
 }
 .success-color {
@@ -821,7 +821,7 @@ li {
   margin-top: 15px;
 }
 .auth-form .form-group .form-label {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
   color: rgba(var(--title-color), 1);
 }
@@ -3222,15 +3222,15 @@ body.dark .auth-bg-image-box .auth-bg-image {
 .auth-content-bg.auth-content-bg-bottom {
   width: 100%;
   max-width: 600px;
-  min-height: 340px;
+  min-height: 360px;
   margin-top: -13px;
   padding-top: 25px;
   background-color: rgba(var(--white), 1);
   border-radius: 20px 20px 0 0;
   position: absolute;
   bottom: 0;
-  max-height: calc(100vh - 320px - 287px);
   height: 100%;
+  max-height: 320px;
 }
 .auth-content-bg .auth-title {
   position: relative;
