--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2644,7 +2644,7 @@ body.dark .auth-header .logo {
   top: 0;
   padding-top: 25px;
   background-color: rgba(var(--theme-color), 1);
-  z-index: 2;
+  z-index: +2;
 }
 @media (max-width: 600px) {
   .main-header {
