--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -192,6 +192,7 @@
                 color: #a36060;
                 margin: 10px 0;
             }
+            .putar{rotate:180deg;}
             .bg-pattern .card::before {
                 background: linear-gradient(135deg, #f8f9fa 25%, #e8f5e9 100%);
                 background-image: url(./assets/images/bg2.svg);
@@ -234,12 +235,7 @@
                 display: inline-block;
                 margin-right: 5px;
             }
-
-            .user-info h5 {
-                margin: 0;
-                font-weight: 600;
-            }
-
+            .user-info h5 {margin: 0;font-weight: 600;}
             .location {
                 font-size: 0.9rem;
                 color: #6c757d;
@@ -290,6 +286,7 @@
                 right: -8px;
                 top: -5px;
                 font-size:9px;
+                text-transform:capitalize;
             }
             @media (max-width: 576px) {
                 .left-box {
