--- a/assets/css/listitem.css
+++ b/assets/css/listitem.css
@@ -107,7 +107,7 @@
                 box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
                 position: absolute;
             }
-            .pntoko {
+            .pnOutlet {
                 position: absolute;
                 top: 18px;
                 width: 100%;
